fix nav link hover on mobile

--- a/src/components/app-nav/app-nav.scss
+++ b/src/components/app-nav/app-nav.scss
@@ -6,7 +6,7 @@ nav {
   left: 0;
   z-index: 99;
   width: 100%;
-  background-color: #090a16; //$color-complement-1;
+  background-color: #000; //#090a16; //$color-complement-1;
 
   ul {
     position: relative;
@@ -33,13 +33,13 @@ nav {
       transition: 0.5s;
       background-color: #090a16;
 
-      &:hover {
-        cursor: pointer;
-        mix-blend-mode: luminosity;
-      }
-
       @media only screen and (min-width: $small-bp) {
         font-size: 1.2rem;
+
+        &:hover {
+          cursor: pointer;
+          mix-blend-mode: luminosity;
+        }
       }
     }
   }
